<?xml version="1.0" encoding="utf-8"?>
<!--RelativeLayout was used to center the elements first then add a vertical bias to it
 so it goes in the bottom third of the screen-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.WelcomeFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lorem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/lorem"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

        <Button
            android:id="@+id/instrucBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lorem"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/go_to_instructions" />
    </RelativeLayout>
</layout>